--- a/Backend_project/views/homepage.ejs
+++ b/Backend_project/views/homepage.ejs
@@ -1,6 +1,7 @@
 <p>{{81/9}}</p>
-<md-content class="md-blue-theme">
-<section layout="row" layout-sm="column" layout-align="center center">
+<div class="buttondemoBasicUsage">
+<md-content class="md-blue-theme" >
+<section layout-align="center center">
 
 <md-button class="md-fab" ng-disabled="true" aria-label="Comment">
     <md-icon icon="/images/icons/2x_web/ic_3d_rotation_black_24dp.png" style="width: 24px; height: 24px;"></md-icon>
@@ -8,3 +9,4 @@
 
     </section>
 </md-content>
+    </div>
