room opmaak raw

--- a/Backend_project/assets/templates/room.html
+++ b/Backend_project/assets/templates/room.html
@@ -1,1 +1,30 @@
-<h1>{{room}}</h1>
+<h1 style="display: inline-block;">You are in room: {{roomName}}</h1>
+
+<form style="display: inline-block;">
+    <md-button class="md-fab md-primary" md-theme="cyan" aria-label="Login" ng-click="uploadfile()">
+        <i class="md-note-add" style="font-size: 30px; "></i>
+</md-button>
+</form>
+<div layout="row">
+<div style="border: dashed 1px red; position: fixed; height: 500px; top: 150px;">
+    <h2>GRAFIEKEN</h2>
+</div>
+
+
+
+
+
+<div flex="60" style="height: 700px; margin-left: auto; margin-right: auto; background-color: #add8e6;">
+
+</div>
+<md-button class="md-fab md-primary" md-theme="cyan" aria-label="Login" ng-click="uploadfile()"style="position: fixed; right: 0;">
+    <i class="md-messenger" style="font-size: 30px; "></i>
+</md-button>
+<div style="border: dashed 1px red; position: fixed; height: 500px; width:200px;  right: 0; top: 150px;">
+    <h2>MESSENGER</h2>
+</div>
+
+
+
+
+</div>
