renamed room to roomName and name to userName in frontend and backend, made notifycontent change, changecontent,upload

--- a/Backend_project/assets/templates/login.html
+++ b/Backend_project/assets/templates/login.html
@@ -4,9 +4,9 @@
             <form style="padding: 20px;">
                 <h2>Log in:</h2>
                 <div class="row">
-                    <md-text-float label="Username" ng-model="name"></md-text-float>
-                    <md-text-float label="Room" ng-model="room"></md-text-float>
-                    <md-button class="md-fab md-primary" md-theme="cyan" aria-label="Login" ng-click="login(name,room)">
+                    <md-text-float label="Username" ng-model="userName"></md-text-float>
+                    <md-text-float label="Room" ng-model="roomName"></md-text-float>
+                    <md-button class="md-fab md-primary" md-theme="cyan" aria-label="Login" ng-click="login(userName,roomName)">
                         <i class="md-person-add"></i>
                     </md-button>
                 </div>
