--- a/Backend_project/assets/templates/room.html
+++ b/Backend_project/assets/templates/room.html
@@ -1,7 +1,7 @@
 <h1 style="display: inline-block;">You are in room: {{roomName}}</h1>
 
 <form style="display: inline-block;">
-    <md-button class="md-fab md-primary" md-theme="cyan" aria-label="Login" ng-click="uploadfile()">
+    <md-button class="md-fab md-primary" md-theme="cyan" aria-label="Login" ng-click="showUploadForm()">
         <i class="md-note-add" style="font-size: 30px; "></i>
 </md-button>
 </form>
