--- a/Backend_project/views/layout.ejs
+++ b/Backend_project/views/layout.ejs
@@ -10,28 +10,30 @@
     <title></title>
 </head>
 <body ng-app="app" ng-controller="rootController as rootCtrl">
-<md-toolbar>
     <div>
-        <h1 class="md-toolbar-tools">
-            <span>{{title}}</span>
-        </h1>
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <span>{{title}}</span>
+                <span flex></span>
+                <md-button ng-repeat="action in actions" ng-click="action.execute()">{{action.title}}</md-button>
+            </div>
+        </md-toolbar>
+        <div ng-view>
+        </div>
     </div>
-</md-toolbar>
-<div ng-view>
-</div>
-
-<script src="/js/dependencies/sails.io.js"></script>
-<script src="/bower_components/angular/angular.js"></script>
-<script src="/bower_components/angular-route/angular-route.js"></script>
-<script src="/bower_components/angular-aria/angular-aria.js"></script>
-<script src="/bower_components/angular-animate/angular-animate.js"></script>
-<script src="/bower_components/hammerjs/hammer.js"></script>
-<script src="/bower_components/angular-material/angular-material.js"></script>
-<script src="/bower_components/angular-cookies/angular-cookies.js"></script>
-<script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
-<script>
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/angular-aria/angular-aria.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/hammerjs/hammer.js"></script>
+    <script src="/bower_components/angular-material/angular-material.js"></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
+    <script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
+    <script>
     //looks like the most supported file upload https://github.com/danialfarid/angular-file-upload
-    var app = angular.module('app', [ 'ngCookies', 'ngRoute', 'ngMaterial' , 'ngSails' ]);
+    var app = angular.module('app', [ 'ngCookies', 'ngRoute', 'ngMaterial' , 'ngSails', 'angularFileUpload']);
 
     app.config(['$routeProvider', '$sailsProvider', function ($routeProvider, $sailsProvider) {
         $routeProvider.when('/', {
@@ -51,54 +53,110 @@
             .controller('rootController', ['$scope', function ($scope) {
                 $scope.title = "Media Chat";
                 $scope.isLoggedIn = false;
+                $scope.actions=[];
             }])
             .controller('loginController', ['$scope', '$cookies', '$location', function ($scope, $cookies, $location) {
+                $scope.actions=[];
+
                 //check if cookie for roomName and userName exists, if so, route to roomController
                 if ($cookies.userName && $cookies.roomName) {
                     login($cookies.userName, $cookies.roomName);
                 }
-                $scope.name = $cookies.userName;
-                $scope.room = $cookies.roomName;
+                $scope.userName = $cookies.userName;
+                $scope.roomName = $cookies.roomName;
 
                 //set the userName cookie when set and route to the roomController with route
                 ///logging in is not the intention over here, the logging in happens in the roomController and chatController
-                function login(name, room) {
-                    $cookies.userName = name;
-                    $location.path("/room/" + room);
+                function login(userName, roomName) {
+                    $cookies.userName = userName;
+                    $location.path("/room/" + roomName);
                 }
 
                 $scope.login = login;
             }])
-            .controller('roomController', ['$scope', '$cookies', '$routeParams', '$sails','$location', function ($scope, $cookies, $routeParams, $sails,$location) {
+            .controller('roomController', ['$scope', '$cookies','$cookieStore', '$routeParams', '$sails','$location','$mdDialog', function ($scope, $cookies,$cookieStore, $routeParams, $sails, $location,$mdDialog) {
                 //set the roomName cookie and get the userName cookie
                 var roomConstants = {
-                            join: 'roomJoinEvent',
-                            leave: 'roomLeaveEvent'
+                    join: 'roomJoinEvent',
+                    leave: 'roomLeaveEvent',
+                    notifyContentChanged:'notifyContentChanged'
                         },
-                        name = $cookies.userName,
-                        room = $routeParams.roomName;
-                $scope.roomName = room;
-                $scope.title = "Media Chat: " + room;
-                $scope.name = name;
-                $cookies.roomName = room;
+                        userName = $cookies.userName,
+                        roomName = $routeParams.roomName;
+                $scope.roomName = roomName;
+                $scope.title = "Media Chat: " + roomName;
+                $scope.userName = userName;
+                $scope.users = [];
+                $cookies.roomName = roomName;
+
+                $scope.actions.length=0;
+                $scope.actions.push({title:"logout",execute:function(){
+                    $sails.post("/room/leave", {userName: userName, roomName: roomName});
+                    $cookieStore.remove('roomName');
+                    $location.path("/");
+                    }
+                });
 
 
                 //login to the roomController
                 (function joinRoom() {
-                    $sails.post("/room/join", {name: name, room: room});
+                    $sails.post("/room/join", {userName: userName, roomName: roomName});
                 })();
-                $scope.leaveRoom = function (name, room) {
-                    $sails.post("/room/leave", {name: name, room: room});
-                };
+                (function getRooms(){
+                    $sails.get("/room/"+roomName+"/users",function(users){
+                        $scope.users = users;
+                    });
+                })();
+
                 $sails.on(roomConstants.join, function (joinMessage) {
                     console.log(joinMessage);
                 });
                 $sails.on(roomConstants.leave, function (leaveMessage) {
                     console.log(leaveMessage);
                 });
+                $sails.on(roomConstants.notifyContentChanged,function(notifyMessage){
+                    console.log(notifyMessage);
+                });
+
+                $scope.showUploadForm=function(){
+                    $mdDialog.show({
+                        templateUrl: 'templates/upload.html',
+                        controller: 'uploadController'
+                    });
+                };
+            }])
+            .controller('uploadController',['$scope','$routeParams','$cookies','$sails','$upload','$mdDialog',function($scope,$routeParams,$cookies,$sails,$upload,$mdDialog){
+                var roomName = $routeParams.roomName,
+                        userName = $cookies.userName;
+
+                $scope.$watch('files', function() {
+                    if($scope.files){
+                        for (var i = 0; i < $scope.files.length; i++) {
+                            var file = $scope.files[i];
+                            $scope.upload = $upload.upload({
+                                url: '/room/upload', // upload.php script, node.js route, or servlet url
+                                method: 'POST',
+                                file: file,
+                                data: {userName:userName,roomName:roomName,title:'test'}
+
+                            }).progress(function (evt) {
+                                console.log('progress: ' + parseInt(100.0 * evt.loaded / evt.total) + '% file :' + evt.config.file.name);
+                            }).success(function (content, status, headers, config) {
+                                // file is uploaded successfully
+                                console.log('file ' + config.file.name + 'is uploaded successfully. Response: ' + content);
+                                changeContent(content.id);
+                                $mdDialog.hide();
+                            });
+                        }
+                    }
+                });
+
+                function changeContent(fileId){
+                    $sails.post("/room/changeContent",{roomName:roomName,fileId:fileId});
+                }
             }])
         //TODO:turn chatController into a 'chatRoom' directive
-            .controller('chatController', ['$scope', '$cookies', '$routeParams', '$sails', function ($scope, $cookies, $sails) {
+            .controller('chatController', ['$scope', '$cookies', '$routeParams', '$sails', function ($scope, $cookies,$routeParams, $sails) {
                 //get the userName and roomName cookies to login to the ChatController
                 var chatConstants = {
                             join: 'chatJoinEvent',
@@ -106,25 +164,25 @@
                             userIsTyping: 'chatUserIsTypingEvent',
                             leave: 'chatLeaveEvent'
                         },
-                        name = $cookies.userName,
-                        room = $routeParams.roomName,
+                        userName = $cookies.userName,
+                        roomName = $routeParams.roomName,
                         hasUserNotifiedTyping = false,
                         userIsTypingTime = 3000;
 
                 $scope.messages = [];
                 $scope.message = "";
-                $scope.name = name;
-                $scope.room = room;
+                $scope.userName = userName;
+                $scope.roomName = roomName;
                 $scope.userIsTypingMessage = null;
 
 
                 (function joinRoom() {
-                    $sails.post("/chat/join", {name: name, room: room});
+                    $sails.post("/chat/join", {userName: userName, roomName: roomName});
                 })();
 
                 $scope.notifyUserIsTyping = function () {
                     if (!hasUserNotifiedTyping) {
-                        $sails.post("/chat/userIsTyping", {name: name, room: room});
+                        $sails.post("/chat/userIsTyping", {userName: userName, roomName: roomName});
                         hasUserNotifiedTyping = true;
                         setTimeout(
                                 function () {
@@ -134,19 +192,18 @@
                     }
                 };
                 $sails.on(chatConstants.join, function (joinMessage) {
-                    joinMessage.message = joinMessage.name + " has joined the room";
+                    joinMessage.message = joinMessage.userName + " has joined the room";
                     $scope.messages.push(joinMessage);
                 });
                 $sails.on(chatConstants.send, function (sendMessage) {
                     $scope.messages.push(sendMessage);
-                    $scope.message = "";
                 });
                 $sails.on(chatConstants.leave, function (leaveMessage) {
-                    leaveMessage.message = leaveMessage.name + " has left the room";
+                    leaveMessage.message = leaveMessage.userName + " has left the room";
                     $scope.messages.push(leaveMessage);
                 });
                 $sails.on(chatConstants.userIsTyping, function (typingMessage) {
-                    $scope.userIsTypingMessage = typingMessage.name + ' is typing';
+                    $scope.userIsTypingMessage = typingMessage.userName + ' is typing';
                     setTimeout(function () {
                         $scope.userIsTypingMessage = null;
                     }, userIsTypingTime);
