--- a/Backend_project/assets/templates/upload.html
+++ b/Backend_project/assets/templates/upload.html
@@ -1,5 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Upload file">
     <md-content>
+        <md-subheader class="md-sticky-no-effect">Upload a file</md-subheader>
         <button ng-file-select
                 ng-model="files"
                 accept="image/*"
