--- a/Backend_project/views/layout.ejs
+++ b/Backend_project/views/layout.ejs
@@ -3,254 +3,38 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/bower_components/angular-material/angular-material.css">
-    <link rel="stylesheet" type="text/css" href="/bower_components/angular-material/themes/blue-grey-theme.css">
-    <link rel="stylesheet" type="text/css"
-          href="/styles/material-design-iconic-font/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/material-design-iconic-font/css/material-design-iconic-font.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic">
-    <link rel="stylesheet" type="text/css"
-          href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Chat app</title>
 </head>
-<body ng-app="app" ng-controller="rootController as rootCtrl">
-    <div>
+    <body ng-app="app" ng-controller="rootController as rootCtrl">
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <span>{{title}}</span>
                 <span flex></span>
-                <md-button ng-repeat="action in actions" ng-click="action.execute()">{{action.title}}</md-button>
+                <!-- the rootController sets an actions array in the scope, store a function in the execute property, so it can be called on click here -->
+                <md-button ng-repeat="action in actions" ng-click="action.execute()">{{action.title}}<i ng-if="action.icon" class="{{action.icon}}"></i></md-button>
             </div>
         </md-toolbar>
         <div ng-view>
         </div>
-    </div>
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/bower_components/angular-aria/angular-aria.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.js"></script>
-    <script src="/bower_components/hammerjs/hammer.js"></script>
-    <script src="/bower_components/angular-material/angular-material.js"></script>
-    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
-    <script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/velocity/velocity.min.js"></script>
-    <script src="/bower_components/velocity/velocity.ui.min.js"></script>
-<script>
-    //looks like the most supported file upload https://github.com/danialfarid/angular-file-upload
-    var app = angular.module('app', [ 'ngCookies', 'ngRoute', 'ngMaterial' , 'ngSails', 'angularFileUpload']);
-
-    app.config(['$routeProvider', '$sailsProvider', function ($routeProvider, $sailsProvider) {
-        $routeProvider.when('/', {
-            templateUrl: 'templates/login.html',
-            controller: 'loginController'
-        })
-                .when('/room/:roomName', {
-                    templateUrl: 'templates/room.html',
-                    controller: 'roomController'
-                })
-                .otherwise({
-                    redirectTo: '/'
-                });
-
-        $sailsProvider.url = '/';
-    }])
-            .controller('rootController', ['$scope', function ($scope) {
-                $scope.title = "Media Chat";
-                $scope.isLoggedIn = false;
-                $scope.actions=[];
-            }])
-            .controller('loginController', ['$scope', '$cookies', '$location', function ($scope, $cookies, $location) {
-                $scope.actions.length=0;
-
-                //check if cookie for roomName and userName exists, if so, route to roomController
-                if ($cookies.userName && $cookies.roomName) {
-                    login($cookies.userName, $cookies.roomName);
-                }
-                $scope.userName = $cookies.userName;
-                $scope.roomName = $cookies.roomName;
-
-                //set the userName cookie when set and route to the roomController with route
-                ///logging in is not the intention over here, the logging in happens in the roomController and chatController
-                function login(userName, roomName) {
-                    $cookies.userName = userName;
-                    $location.path("/room/" + roomName);
-                }
-
-                $scope.login = login;
-            }])
-            .controller('roomController', ['$scope', '$cookies','$cookieStore', '$routeParams', '$sails', '$location','$mdDialog', '$timeout', function ($scope, $cookies,$cookieStore, $routeParams, $sails, $location,$mdDialog, $timeout) {
-                $scope.teller = 0;
-                $('#messager').velocity({opacity: 0}, 0);
-                $('#messager').velocity({scale: 0}, 0);
-                $scope.showhidemessenger = true;
-                $scope.messengeropenen = function () {
-                    if ($scope.teller == 0) {
-                        $('#messager').velocity({opacity: 1}, 200);
-                        $('#messager').velocity({scale: 1}, 400);
-                        $scope.teller += 1
-                    }
-                    else {
-                        $scope.teller = 0;
-                        $('#messager').velocity({scale: 0}, 400);
-                        $('#messager').velocity({opacity: 0}, 500);
-
-                    }
-                };
-
-                //set the roomName cookie and get the userName cookie
-                var roomConstants = {
-                    join: 'roomJoinEvent',
-                    leave: 'roomLeaveEvent',
-                    notifyContentChanged:'notifyContentChanged'
-                        },
-                        userName = $cookies.userName,
-                        roomName = $routeParams.roomName;
-                $scope.roomName = roomName;
-                $scope.title = "Media Chat: " + roomName;
-                $scope.userName = userName;
-                $scope.users = [];
-                $cookies.roomName = roomName;
-
-                $scope.actions.length=0;
-                $scope.actions.push({title:"logout",execute:function(){
-                    $sails.post("/room/leave", {userName: userName, roomName: roomName});
-                    $cookieStore.remove('roomName');
-                    $location.path("/");
-                    }
-                });
-
-
-                //login to the roomController
-                (function joinRoom() {
-                    $sails.post("/room/join", {userName: userName, roomName: roomName});
-                })();
-                (function getRooms(){
-                    $sails.get("/room/"+roomName+"/users",function(users){
-                        $scope.users = users;
-                    });
-                })();
-
-                $sails.on(roomConstants.join, function (joinMessage) {
-                    console.log(joinMessage);
-                });
-                $sails.on(roomConstants.leave, function (leaveMessage) {
-                    console.log(leaveMessage);
-                });
-                $sails.on(roomConstants.notifyContentChanged,function(notifyMessage){
-                    console.log(notifyMessage);
-                });
-
-                $scope.showUploadForm=function(){
-                    $mdDialog.show({
-                        templateUrl: 'templates/upload.html',
-                        controller: 'uploadController'
-                    });
-                };
-            }])
-            .controller('uploadController',['$scope','$routeParams','$cookies','$sails','$upload','$mdDialog',function($scope,$routeParams,$cookies,$sails,$upload,$mdDialog){
-                var roomName = $routeParams.roomName,
-                        userName = $cookies.userName;
-
-                $scope.$watch('files', function() {
-                    if($scope.files){
-                        for (var i = 0; i < $scope.files.length; i++) {
-                            var file = $scope.files[i];
-                            $scope.upload = $upload.upload({
-                                url: '/room/upload', // upload.php script, node.js route, or servlet url
-                                method: 'POST',
-                                file: file,
-                                data: {userName:userName,roomName:roomName,title:'test'}
-
-                            }).progress(function (evt) {
-                                console.log('progress: ' + parseInt(100.0 * evt.loaded / evt.total) + '% file :' + evt.config.file.name);
-                            }).success(function (content, status, headers, config) {
-                                // file is uploaded successfully
-                                console.log('file ' + config.file.name + 'is uploaded successfully. Response: ' + content);
-                                changeContent(content.id);
-                                $mdDialog.hide();
-                            });
-                        }
-                    }
-                });
-
-                function changeContent(fileId){
-                    $sails.post("/room/changeContent",{roomName:roomName,fileId:fileId});
-                }
-            }])
-        //TODO:turn chatController into a 'chatRoom' directive
-            .controller('chatController', ['$scope', '$cookies', '$routeParams', '$sails', '$timeout', function ($scope, $cookies, $routeParams, $sails, $timeout) {
-                //get the userName and roomName cookies to login to the ChatController
-
-
-                var chatConstants = {
-                            join: 'chatJoinEvent',
-                            send: 'chatSendEvent',
-                            userIsTyping: 'chatUserIsTypingEvent',
-                            leave: 'chatLeaveEvent'
-                        },
-                        userName = $cookies.userName,
-                        roomName = $routeParams.roomName,
-                        hasUserNotifiedTyping = false,
-                        userIsTypingTime = 4000;
-
-                $scope.messages = [];
-                $scope.message = "";
-                $scope.userName = userName;
-                $scope.roomName = roomName;
-                $scope.userIsTypingMessage = null;
-                $scope.send = function (message) {
-                    var messageRequest = {userName: userName, roomName: roomName, message: message};
-                    $sails.post("/chat/send", messageRequest);
-                    $scope.messages.push(messageRequest);
-                    $scope.message = "";
-                };
-               $scope.enterevent=function(e,message){
-                 if(e.keyCode==13){
-                       $scope.send(message);
-                   }
-
-
-               };
-
-
-                (function joinRoom() {
-                    $sails.post("/chat/join", {userName: userName, roomName: roomName});
-                })();
-
-                $scope.notifyUserIsTyping = function () {
-                    if (!hasUserNotifiedTyping) {
-                        $sails.post("/chat/userIsTyping", {userName: userName, roomName: roomName});
-                        hasUserNotifiedTyping = true;
-                        setTimeout(
-                                function () {
-                                    hasUserNotifiedTyping = false;
-                                },
-                                userIsTypingTime);
-                    }
-                };
-                $sails.on(chatConstants.join, function (joinMessage) {
-                    joinMessage.message = joinMessage.userName + " has joined the room";
-                    $scope.messages.push(joinMessage);
-                });
-                $sails.on(chatConstants.send, function (sendMessage) {
-                    $scope.messages.push(sendMessage);
-                });
-                $sails.on(chatConstants.leave, function (leaveMessage) {
-                    leaveMessage.message = leaveMessage.userName + " has left the room";
-                    $scope.messages.push(leaveMessage);
-                });
-                $sails.on(chatConstants.userIsTyping, function (typingMessage) {
-                    $scope.userIsTypingMessage = typingMessage.userName + ' is typing';
-                    $timeout(function () {
-                        $scope.userIsTypingMessage = "";
-                    }, userIsTypingTime);
-                });
-            }]);
-
-
-</script>
-</body>
+        <script src="/js/dependencies/sails.io.js"></script>
+        <script src="/bower_components/angular/angular.js"></script>
+        <script src="/bower_components/angular-route/angular-route.js"></script>
+        <script src="/bower_components/angular-aria/angular-aria.js"></script>
+        <script src="/bower_components/angular-animate/angular-animate.js"></script>
+        <script src="/bower_components/hammerjs/hammer.js"></script>
+        <script src="/bower_components/angular-material/angular-material.js"></script>
+        <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+        <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
+        <script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
+        <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="/bower_components/velocity/velocity.min.js"></script>
+        <script src="/bower_components/velocity/velocity.ui.min.js"></script>
+        <script src="/js/app.js"></script>
+    </body>
 </html>
 
 
