--- a/Backend_project/assets/templates/youtubeForm.html
+++ b/Backend_project/assets/templates/youtubeForm.html
@@ -1,7 +1,10 @@
 <md-dialog >
     <md-content>
-        <md-subheader class="md-sticky-no-effect">Paste youtube link here.</md-subheader>
-        <md-text-float label="Paste youtube link here" ng-model="youtubeLink"></md-text-float>
-        <md-button ng-click="insertYoutubeLink()">ENTER</md-button>
+        <form name="youtubeForm">
+            <md-subheader class="md-sticky-no-effect">Paste youtube link here.</md-subheader>
+            <md-text-float label="Title" ng-model="title" required></md-text-float>
+            <md-text-float label="Paste youtube link here" ng-model="youtubeLink" required></md-text-float>
+            <md-button ng-click="youtubeForm.$valid&&insertYoutubeLink(title,youtubeLink)">ENTER</md-button>
+        </form>
     </md-content>
 </md-dialog>
