--- a/Backend_project/assets/templates/room.html
+++ b/Backend_project/assets/templates/room.html
@@ -33,14 +33,14 @@
             </audio>
         </div>
 
-        <div style="height: 100px;">
+        <div ng-if="content" style="height: 100px;">
             <div style="margin: 30px 0 10px 385px;">
-                <img id="tinderyes" ng-src="./images/TinderYes.png" title="tinder yes" ng-click="tinderYes()">
-                <img id="tinderno" ng-src="./images/TinderNo.png" title="tinder no" ng-click="tinderNo()">
+                <img id="tinderyes" src="images/TinderYes.png" title="tinder yes" ng-click="tinderYes()">
+                <img id="tinderno" src="images/TinderNo.png" title="tinder no" ng-click="tinderNo()">
             </div>
-            <div>
-                <md-progress-linear  id="lin2" md-mode="determinate" ng-value="{{likes}}"></md-progress-linear>
-                <md-progress-linear  id="lin1" style=" padding-top: 10px;" md-mode="determinate" ng-value="{{dislikes}}"></md-progress-linear>
+            <div ng-show="(content.loves+content.hates)>0">
+                <md-progress-linear id="lin2" md-mode="determinate" value="{{100*content.loves/(content.loves+content.hates)}}"></md-progress-linear>
+                <md-progress-linear id="lin1" style=" padding-top: 10px;" md-mode="determinate" value="{{100*content.hates/(content.loves+content.hates)}}"></md-progress-linear>
             </div>
         </div>
     </div>
