--- a/Backend_project/assets/templates/room.html
+++ b/Backend_project/assets/templates/room.html
@@ -30,8 +30,8 @@
 
         <div style="height: 100px;">
             <div style="margin: 30px 0 10px 385px;">
-                <img id="tinderyes" ng-src="./images/TinderYes.png" title="tinder yes" ng-click="tinderYes()">
-                <img id="tinderno" ng-src="./images/TinderNo.png" title="tinder no" ng-click="tinderNo()">
+                <img id="tinderyes" ng-src="./images/TinderYes.png" title="HOT" ng-click="tinderYes()">
+                <img id="tinderno" ng-src="./images/TinderNo.png" title="NOT" ng-click="tinderNo()">
             </div>
             <div>
                 <md-progress-linear  id="lin2" md-mode="determinate" ng-value="{{likes}}"></md-progress-linear>
