--- a/Backend_project/assets/styles/style.css
+++ b/Backend_project/assets/styles/style.css
@@ -42,14 +42,7 @@
     -moz-box-shadow:    1px 1px 4px 0px rgba(69, 69, 69, 0.8);
     box-shadow:         1px 1px 4px 0px rgba(69, 69, 69, 0.8);
  }
-#firstletter{
-    color: #454545;
-    font-family: 'FontAwesome', sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-text-align: center;
-    margin-top: 6px;
-}
+
 #lin1 .md-bar2
 {
     background-color: red;
@@ -65,4 +58,89 @@ text-align: center;
 }
 .hide{
     display: none;
+}
+
+
+.progress-bar {
+    float: left;
+    width: 0;
+    height: 100%;
+    font-size: 12px;
+    line-height: 20px;
+    color: #fff;
+    text-align: center;
+    background-color: #337ab7;
+    -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+    -webkit-transition: width .3s ease;
+    -o-transition: width .3s ease;
+    transition: width .3s ease;
+}
+
+.progress-bar-success {
+    background-color: #5cb85c;
+}
+
+.progress-bar-danger {
+    background-color: #d9534f;
+}
+
+.progress {
+    height: 10px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+}
+
+md-button.md-default-theme.md-raised.md-primary, md-button.md-default-theme.md-fab.md-primary,
+md-button.md-default-theme.md-raised.md-primary:not([disabled]):hover, md-button.md-default-theme.md-raised.md-primary:not([disabled]).focus, md-button.md-default-theme.md-fab.md-primary:not([disabled]):hover, md-button.md-default-theme.md-fab.md-primary:not([disabled]).focus{
+    background-color: #fff;
+    color:#333;
+}
+
+#users{
+    position: fixed;
+    top: 100px;
+    left: 50px;
+    bottom: 100px;
+    width: 55px;
+    display: block;
+}
+
+@media (max-width: 600px){
+    #users{
+        display: none;
+    }
+}
+
+.user{
+    font-size: 30px;
+    width:55px;
+    height:55px;
+    margin-bottom: 5px;
+}
+.user button{
+    cursor: default;
+}
+
+.content-card{
+    width: 960px;
+    margin:45px auto 0;
+}
+
+.content-card .md-button{
+    background:#fff;
+}
+
+@media screen and (max-width:1080px){
+    .content-card{
+        width: 80%;
+    }
+}
+@media screen and (max-width:720px){
+    .content-card{
+        width: 90%;
+    }
 }
