--- a/Backend_project/assets/templates/login.html
+++ b/Backend_project/assets/templates/login.html
@@ -1,4 +1,4 @@
-<div layout="row" layout-align="center center" class="fill-height">
+<div layout="row" layout-align="center center" style="margin-top: 10%;" class="fill-height">
     <md-content>
         <md-card>
             <form name="loginForm" style="padding: 10px;" novalidate>
