--- a/Backend_project/views/layout.ejs
+++ b/Backend_project/views/layout.ejs
@@ -23,6 +23,9 @@
                 <!-- the rootController sets an actions array in the scope, store a function in the execute property, so it can be called on click here -->
                 <md-button ng-repeat="action in actions" ng-click="action.execute()">
                     <i ng-if="action.icon" class="{{action.icon}}"></i>
+                    <md-tooltip>
+                        {{action.title}}
+                    </md-tooltip>
                 </md-button>
             </div>
         </md-toolbar>
