--- a/Backend_project/assets/templates/uploadMusicForm.html
+++ b/Backend_project/assets/templates/uploadMusicForm.html
@@ -16,6 +16,6 @@
              style="padding:100px;">
             Drop song here
         </div>
-        <md-button class="md-primary fill-width" ng-click="files.length>0&&uploadSong(title,files[0])">Upload picture</md-button>
+        <md-button class="md-primary fill-width" ng-click="files.length>0&&uploadSong(title,files[0])">Upload song</md-button>
     </md-content>
 </md-dialog>
